# todo-app-fullstack

./: README.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  fly.toml  pyproject.toml
backend/backend/: app.py
backend/backend/auth/: security.py
backend/backend/config/: settings.py
backend/backend/database/: database.py  enums.py  models.py
backend/backend/routers/: auth.py  location.py  task.py  user.py
backend/backend/schemas/: auth.py  location.py  task.py  user.py
backend/backend/services/: auth.py  location.py  task.py  user.py
backend/backend/utils/: dependencies.py  exceptions.py  sanitize.py
backend/migrations/: env.py
backend/migrations/versions/: 17c6d83c3146_create_users_tasks_and_locations_table.py  62b583a2b984_create_users_and_tasks_table.py  62e84b37a6ce_remove_unique_constraint_from_user_id_.py  637f5efd33d5_update_tasks_table.py  6aa9c6fffbe3_create_users_tasks_and_locations_table.py  a9d984632e41_enforce_one_to_one_relationship_between_.py  c48f9f1c07c5_setting_init_false_in_relationships_in_.py
frontend/: .env.example  .gitignore  README.md  eslint.config.js  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/Components/Hero/: Hero.tsx
frontend/src/Context/: useAuth.tsx
frontend/src/Helpers/: ErrorHandler.tsx
frontend/src/Models/: Location.ts  Task.ts  User.ts
frontend/src/Routes/: ProtectedRoute.tsx  Routes.tsx
frontend/src/Services/: AuthService.tsx  LocationService.tsx  TaskService.tsx
(+12 files in other folders)
