[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Juliana Zacharias <julianazacharias.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
fastapi = {extras = ["standard"], version = "^0.115.5"}
sqlalchemy = "^2.0.36"
pydantic-settings = "^2.6.1"
alembic = "^1.14.0"
pyjwt = "^2.10.0"
pwdlib = {extras = ["argon2"], version = "^0.2.1"}
pydantic = {extras = ["email"], version = "^2.10.1"}
psycopg = {extras = ["binary"], version = "^3.2.3"}


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
taskipy = "^1.14.0"
ruff = "^0.8.0"
httpx = "^0.27.2"
factory-boy = "^3.3.1"
freezegun = "^1.5.1"
testcontainers = "^4.8.2"

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = false
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = false
quote-style = 'single'

[tool.taskipy.tasks]
lint = 'ruff check .; ruff check . --diff'
format = 'ruff check . --fix; ruff format .'
run = 'fastapi dev backend/app.py'
pre_test = 'task lint'
test = 'pytest -s -x --cov=backend -vv'
post_test = 'coverage html'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
